# radboud

./: README.markdown
compiler-construction-IMC004/: Makefile  TODO  computer_science.bib  helloWorld.spl  klinik2013CompilerConstruction.tex  klinik2013CompilerConstructionParser.tex  klinik2013CompilerConstructionTypechecker.tex  klinik2013TypecheckerPresentation.tex  mklinik.spl  spl.cabal  test.spl  worklog
compiler-construction-IMC004/doc/: Makefile  computer_science.bib  klinik2013BackendSsmPresentation.tex  klinik2013CompConsProposalP4.tex  klinik2013CompilerConstruction.tex  klinik2013RecordsPresentation.tex
compiler-construction-IMC004/examples/: helloPrint.spl  p1-lexing-and-parsing.spl  test.spl  test2.spl  test3.spl
compiler-construction-IMC004/examples/interpreter/: map_fold.spl
compiler-construction-IMC004/examples/p1-examplePrograms/: 2D.spl  booleans.spl  list.spl  pass_nested_expr.spl  while.spl
compiler-construction-IMC004/examples/p2-handin-mklinik/: fail-mutual-recursion-lists.spl  fail-mutual-recursion-lists.txt  fail-no-polymorphism-in-variables-lvalues.spl  fail-no-polymorphism-in-variables-lvalues.txt  fail-no-polymorphism-in-variables-rvalues.spl  fail-no-polymorphism-in-variables-rvalues.txt  fail-not-enough-function-arguments.spl  fail-not-enough-function-arguments.txt  fail-polymorphism-mutual-recursion.spl  fail-polymorphism-mutual-recursion.txt  fail-return-function.spl  fail-return-function.txt  pass-fold-map.spl  (+21 more)
compiler-construction-IMC004/parserCombinators/: UUParsinglib.hs
compiler-construction-IMC004/src/: Ast.hs  BackendSsm.hs  Compile.hs  CompileError.hs  IntermediateRepresentation.hs  Interpreter.hs  Lexer.hs  Main.hs  Options.hs  Parser.hs  Prettyprint.hs  Prettyprinter.hs  Repl.hs  SplType.hs  Typechecker.hs  Utils.hs
compiler-construction-IMC004/test/: BackendSsmSpec.hs  IntermediateRepresentationSpec.hs  InterpreterSpec.hs  ParserSpec.hs  Test.hs  TestUtils.hs  TypecheckerSpec.hs
(+1851 files in other folders)
