name:             spl
version:          0.0.0
synopsis:         compiler for SPL, a simple strict and ï¬rst order programming language
build-type:       Simple
cabal-version:    >= 1.10

executable spl
  default-language: Haskell2010
  ghc-options:
    -Wall

  build-depends:
      base-compat >= 0.2
    , uu-parsinglib

  hs-source-dirs:
      src

  main-is:
    Main.hs

  other-modules:
    Lexer
