name:             spl
version:          0.0.0
synopsis:         compiler for SPL, a simple strict and ï¬rst order programming language
build-type:       Simple
cabal-version:    >= 1.10

executable spl
  default-language: Haskell2010
  ghc-options:
    -Wall

  build-depends:
      base-compat >= 0.2
    , uu-parsinglib
    , ListLike

  hs-source-dirs:
    src

  main-is:
    Main.hs

test-suite spec
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  main-is:
    ParserSpec.hs
  ghc-options:
    -Wall
  hs-source-dirs:
    src,test
  build-depends:
      base
    , hspec
    , uu-parsinglib
    , QuickCheck
    , ListLike
